--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -10,39 +10,46 @@
         android:id="@+id/button_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="143dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginBottom="101dp"
         android:text="@string/previous"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idtextView2" />
 
     <ImageView
         android:id="@+id/idmageView"
         android:layout_width="178dp"
-        android:layout_height="169dp"
-        android:layout_marginStart="120dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="104dp"
         android:layout_marginTop="37dp"
+        android:layout_marginBottom="45dp"
+        app:layout_constraintBottom_toTopOf="@+id/idtextView1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/idtextView1"
-        android:layout_width="258dp"
-        android:layout_height="130dp"
-        android:layout_marginStart="83dp"
-        android:layout_marginTop="45dp"
-        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/idtextView2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idmageView" />
 
     <TextView
         android:id="@+id/idtextView2"
-        android:layout_width="256dp"
-        android:layout_height="111dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="40dp"
-        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginEnd="70dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/button_second"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/idtextView1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
