--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -3,16 +3,22 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="60dp"
+    android:background="#C5ED97">
 
     <TextView
         android:id="@+id/idNombreFruta"
-        android:layout_width="205dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="64dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="143dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="223dp"
-        android:text="TextView"
+        android:layout_marginEnd="143dp"
+        android:background="@drawable/stylo_borde_textview"
+        android:backgroundTint="#B8B4B4"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
