Creando el Model:                                                                                                                                                                            Remoto:                                                                                                                                                                            data class Frutos y Result                                                                                                                                                                            ApiInterace                                                                                                                                                                            Retrofit
                                                                                                                                                                           Local:
                                                                                                                                                                           entities---> DetalleFrutos
                                                                                                                                                                           dao-----------> DetalleFrutos
                                                                                                                                                                           DataBaseFrutos
                                                                                                                                                                           repositor terminado.
                                                                                                                                                                           Adaptaer
                                                                                                           

--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -12,8 +12,13 @@
         android:id="@+id/button_second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="101dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="150dp"
         android:text="@string/previous"
+        android:textAlignment="center"
+        android:textColor="#0E0E0E"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +29,7 @@
         android:layout_width="250dp"
         android:layout_height="210dp"
         android:layout_marginStart="70dp"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="150dp"
         android:layout_marginBottom="45dp"
         android:background="@drawable/stylo_borde_textview"
         app:layout_constraintBottom_toTopOf="@+id/idtextView1"
@@ -37,10 +42,15 @@
         android:layout_width="249dp"
         android:layout_height="77dp"
         android:layout_marginStart="70dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/stylo_borde_textview"
-        android:backgroundTint="#BAB2B2"
+        android:backgroundTint="#7A7979"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/idtextView2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -52,9 +62,13 @@
         android:layout_height="77dp"
         android:layout_marginStart="70dp"
         android:layout_marginEnd="70dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/stylo_borde_textview"
-        android:backgroundTint="#BAB2B2"
+        android:backgroundTint="#7A7979"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="22sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/button_second"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
