--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -14,10 +14,11 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="143dp"
         android:background="@drawable/stylo_borde_textview"
-        android:backgroundTint="#B8B4B4"
+        android:backgroundTint="#7A7979"
         android:textAlignment="center"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
