--- a/app/src/main/res/layout/item_list_view.xml
+++ b/app/src/main/res/layout/item_list_view.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:background="#C5ED97">
 
     <TextView
         android:id="@+id/idNombreFruta"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="143dp"
+        android:layout_width="260dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="143dp"
+        android:layout_marginEnd="50dp"
         android:background="@drawable/stylo_borde_textview"
         android:backgroundTint="#7A7979"
         android:textAlignment="center"
@@ -24,4 +24,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ImageButton
+        android:id="@+id/imgFavorito"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="false"
+        android:layout_centerVertical="true"
+        android:background="#C5ED97"
+        app:srcCompat="@android:drawable/star_big_off" />
+</RelativeLayout>
